--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "vue": "^2.5.16",
-    "gsap": "^2.1.2"
+    "gsap": "^2.1.2",
+    "vue": "^2.5.16"
   }
 }
