--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enso-ui/progress-circle",
+  "name": "@cgdsoftware/progress-circle",
   "version": "2.0.7",
   "description": "Progress Circle",
   "main": "index.js",
