--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@liberu-ui/progress-circle",
   "version": "2.0.12",
   "description": "Progress Circle",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
